; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/mm/extr_mmap.c_task_size_64bit.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/mm/extr_mmap.c_task_size_64bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TASK_SIZE_MAX = common dso_local global i64 0, align 8
@DEFAULT_MAP_WINDOW = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @task_size_64bit(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = load i64, i64* @TASK_SIZE_MAX, align 8
  br label %9

7:                                                ; preds = %1
  %8 = load i64, i64* @DEFAULT_MAP_WINDOW, align 8
  br label %9

9:                                                ; preds = %7, %5
  %10 = phi i64 [ %6, %5 ], [ %8, %7 ]
  ret i64 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
